--- a/WebApplicationClass/appsettings.json
+++ b/WebApplicationClass/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DBConnection": "Server=(localdb)\\mssqllocaldb;Database=Books;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
